--- a/minimum-coin-change-problem.ipynb
+++ b/minimum-coin-change-problem.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "def rec_coin(target, coins, min_coins = None):\n",
+    "def min_coin_change(target, coins, min_coins = None):\n",
     "    \n",
     "    if min_coins == None:\n",
     "        min_coins = 0\n",
@@ -33,7 +33,7 @@
     "                    a = coins[:]\n",
     "                    a.remove(i)\n",
     "                    try:\n",
-    "                        min_coins = (int(target/i)) + rec_coin(target%i, a, min_coins)\n",
+    "                        min_coins = (int(target/i)) + min_coin_change(target%i, a, min_coins)\n",
     "                    except TypeError:\n",
     "                        return \"Target value cannot be achieved from the given list of coins\"\n",
     "                    break\n",
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "rec_coin(64,[1,5,10,25])"
+    "min_coin_change(64,[1,5,10,25])"
    ]
   },
   {
@@ -87,7 +87,7 @@
     }
    ],
    "source": [
-    "rec_coin(74,[1,5,10,25])"
+    "min_coin_change(74,[1,5,10,25])"
    ]
   },
   {
@@ -109,7 +109,7 @@
     }
    ],
    "source": [
-    "rec_coin(74,[5,10,25])"
+    "min_coin_change(74,[5,10,25])"
    ]
   },
   {
